samples/service.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: testing-crd
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: testing-crd
spec:
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-test
  namespace: testing-crd
  annotations:
    tunnels.networking.cfargotunnel.com/cr: existing-tunnel
    tunnels.networking.cfargotunnel.com/ns: default
spec:
  selector:
    app: whoami
  ports:
    - port: 80
      targetPort: 80
